# Content-Based-Image-Recognition

./: .gitignore  CMakeLists.txt  readme.txt  texture.cpp  texture.hpp
data/: baseline.csv  center.csv  color.csv  histogram.csv  multi.csv  texture.csv
include/: CMakeLists.txt  Makefile  cmake_install.cmake  csv_util.cpp  distance.cpp  distance.hpp  genFeatures.cpp  genFeatures.hpp
src/: extractFeatures.cpp  matching.cpp
